# sqlrooms

./: .eslintrc  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .lintstagedrc  .lintstagedrc.json  .npmrc  .prettierignore  .prettierrc  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  REFACTOR_SUMMARY.md  SQLRooms Block Document AI Refactor Plan (1).md  conventional-changelog-preset.js  eslint.config.js  eslint.config.mjs  knip.ci.json  knip.json  lerna.json  package-lock.json  package.json  pbcopy  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  skills-lock.json  tsconfig.json  turbo.json  typings.d.ts
.claude/: config.json  settings.json  settings.local.json
.cursor/plans/: cells_module_architecture_review_d232d6c4.plan.md  extensible_cell_types_a0d19eef.plan.md  extensible_cells_and_dagslice_merge_d21cb4bf.plan.md  mosaic_client_abstraction_fea347b1.plan.md  mosaic_client_state_refactor_57fc8f4c.plan.md  multi-db-duckdb-core-architecture_b61e5166.plan.md  parallel_chat_sessions_89c785ca.plan.md  refactor_example_apps_5968b022.plan.md  sqlrooms_cli_app-builder_plan_(adjusted)_174b3a95.plan.md  store_cell_results_directly_c642850f.plan.md  typed_sheets_architecture_db76d267.plan.md  unified_cell_architecture_a10fd68f.plan.md  unified_cells_architecture_993ea118.plan.md  unified_sheets_architecture_2b482395.plan.md
.devtools/: generations.json
.github/workflows/: build-examples.yml  deploy-docs.yml  npm-publish.yml  pr-checks-python.yml  pr-checks.yml  pr-title-check.yml  pr-title.yml  sync-examples.yml
.husky/: pre-commit  pre-push
.ladle/: config.mjs
apps/sqlrooms-cli-ui/: README.md  index.html  jest.config.js  package.json  tailwind.config.ts  vite.config.ts
apps/web-app/: .env.example  README.md  drizzle.config.ts  eslint.config.js  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
charts/: package.json
charts/src/: index.ts
components/: package.json
components/src/: AppContext.tsx  Delayed.tsx  EditableText.tsx  ErrorPane.tsx  Fullbox.tsx  LogoText.tsx  ProgressModal.tsx  QueryContainer.tsx  (+5 more)
contributing/: architecture.md  cursor-cloud.md  patterns.md  python.md  typescript.md
data-table/: package.json
dev-docs/: table-reference-type-boundary-inventory.md
docs/: .gitignore  architecture.md  case-studies.md  commands.md  custom-slice.md  deployment-scenarios.md  examples.md  getting-started.md  index.md  join-slack.md  key-concepts.md  llms.md  modular-architecture.md  motivation.md  offline-use.md  overview.md  packages.md  persistence.md  query-cancellation.md  slices.md  state-management.md  theming.md  upgrade-guide.md  whats-new.md
duckdb/: package.json
layout/: package.json
patches/: sigstore@4.1.0.patch  typedoc-plugin-markdown@4.9.0.patch
project-builder/: package.json  tsconfig.json
project-config/: package.json
python/: .gitignore  README.md  pyproject.toml
python/rag/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHUNKING.md  EXTERNAL_APIS.md  GRAPH_ANALYSIS.md  HYBRID_SEARCH.md  PUBLISHING.md  QUERYING.md  README.md  TOPIC_DETECTION.md  VISUALIZATION_GUIDE.md  pyproject.toml  test_improved_links.sh
python/rag-embedding/: .gitignore  README.md  embeddings.md  example_query.py  prepare_embeddings.py  pyproject.toml  query_duckdb_direct.py
python/rag/docs/: METADATA.md  TOPIC_DETECTION.md  VISUALIZATION_GUIDE.md
python/rag/examples/: README.md  SUMMARY.md  example_query.py  generate_umap_example.py  hybrid_search_example.py  prepare_duckdb_docs.py  prepare_duckdb_docs.sh  query_duckdb_direct.py  test_duckdb_docs_query.py
python/rag/scripts/: README.md
python/rag/sqlrooms_rag/: __init__.py  cli.py  generate_umap.py  prepare.py  query.py
python/rag/sqlrooms_rag/prepare/: __init__.py  chunking.py  core.py  database.py  embeddings.py  metadata.py
python/sqlrooms-cli/: .gitignore  README.md  cli  package.json  pyproject.toml  sqlrooms.db  sqlrooms.db.wal
python/sqlrooms-cli/app/: package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
python/sqlrooms-cli/app/src/: main.tsx  room.tsx  runtimeConfig.ts  serverApi.ts  store.ts
python/sqlrooms-cli/scripts/: dev.mjs
python/sqlrooms-cli/sqlrooms/: cli.py
python/sqlrooms-cli/sqlrooms/web/: ai_settings.py  db_bridge.py  launcher.py  state_store.py  ui.py
python/sqlrooms-cli/sqlrooms/web/db_bridge/: __init__.py  factory.py  registry.py  types.py
python/sqlrooms-cli/sqlrooms/web/db_bridge/connectors/: postgres.py  snowflake.py
python/sqlrooms-cli/sqlrooms_cli/: cli.py  server.py  state_store.py
python/sqlrooms-cli/tests/: test_cli.py  test_db_bridge.py  test_launcher.py  test_state_store.py  test_ui_provider.py
python/sqlrooms-flowmap/: package.json  pyproject.toml
python/sqlrooms-flowmap/examples/: .gitignore  README.md  server.py
python/sqlrooms-flowmap/src/sqlrooms_flowmap/: __init__.py  cli.py  processor.py
python/sqlrooms-server/: README.md  package.json  pyproject.toml
python/sqlrooms-server/sqlrooms/server/: __main__.py  cache.py  db_async.py  query.py  server.py
python/sqlrooms-server/sqlrooms/server/crdt/: __init__.py  state.py  ws.py
python/sqlrooms-server/sqlrooms/server/tests/: test_auth.py  test_cache.py  test_concurrency.py  test_db_async.py  test_meta_storage.py  test_query.py  test_server_security.py  test_websocket.py
s3-browser/: package.json
scripts/: build.sh  check-typedoc-links.mjs  deploy-sqlrooms-cli-to-sprite.sh  dev.mjs  fix-llms-api-links.mjs  fix-typedoc-package-titles.mjs  publish-sqlrooms-cli.mjs  setup-trusted-publishing.mjs  update-readme.mjs  version-prerelease.mjs
sdk/: .gitignore  NOTES.md  README.md  package.json  tsconfig.dist.json  tsconfig.json  typings.d.ts
server/sqlrooms-duckdb-server/: README.md  package.json  pyproject.toml
server/sqlrooms-duckdb-server/pkg/: __main__.py  crdt.py  query.py  server.py
server/sqlrooms-duckdb-server/pkg/tests/: test_auth.py  test_concurrency.py  test_websocket.py
sql-editor/: package.json
utils/: jest.config.js  package.json
vgplot/: package.json
(+1478 files in other folders)
