[project]
name = "sqlrooms"
version = "0.1.0"
description = "CLI to launch the SQLRooms AI app with a DuckDB websocket server."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.4.0,<1.5.0",
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "sqlrooms-duckdb-server",
  "typer>=0.12.5",
  "uvicorn>=0.30.0",
]

[project.scripts]
sqlrooms = "sqlrooms_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sqlrooms_cli"]
include = ["sqlrooms_cli/static/**"]

[tool.hatch.build.targets.sdist]
include = ["README.md", "sqlrooms_cli"]

