[project]
name = "sqlrooms-cli"
dynamic = ["version"]
description = "CLI to launch the SQLRooms AI app with a DuckDB websocket server."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "SQLRooms Contributors" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "duckdb>=1.4.0,<1.5.0",
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "sqlrooms-server>=0.1.0",
  "typer>=0.12.5",
  "uvicorn>=0.30.0",
]

[project.urls]
homepage = "https://sqlrooms.com"
repository = "https://github.com/sqlrooms/sqlrooms"

[project.scripts]
sqlrooms = "sqlrooms.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "ruff",
]

[tool.uv.sources]
sqlrooms-server = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["sqlrooms"]
include = ["sqlrooms/web/static/**"]

[tool.hatch.build.targets.sdist]
include = ["README.md", "LICENSE", "sqlrooms"]

[tool.hatch.version]
path = "package.json"
pattern = "\"version\": \"(?P<version>.+?)\""

