[project]
name = "sqlrooms-flowmap"
version = "0.1.0"
description = "Prepare origin-destination datasets for tiling using DuckDB"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "SQLRooms", email = "info@sqlrooms.dev" }
]
dependencies = [
    "duckdb>=1.0.0",
    "click>=8.0.0",
]

[project.scripts]
sqlrooms-flowmap = "sqlrooms_flowmap.cli:main"

[dependency-groups]
dev = [
    "flask>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlrooms_flowmap"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

